@@ -22,9 +22,6 @@
  */
 
  // key: compiler.err.implicit.class.does.not.have.main.method
- // key: compiler.note.preview.filename
- // key: compiler.note.preview.recompile
- // options: -source ${jdk.version} --enable-preview
 
 public void ordinaryMethod() {
 }
